0.82.25 (next)
  - 25.COM, 28.COM, and 50.COM now have different
    versions for VGA, EGA, and other IBM compatible
    video machines. 28.COM now correctly sets 28 lines
    for machine=ega. CGA/MDA/Hercules/etc. still use
    INT AX=3h for 25.COM.
  - Change 25.COM to use INT 10h AX=1114h (8x16) instead
    of INT 10h AX=3 (set 80x25 mode).
  - INT 10h AX=1111h (8x14) and AX=1113h (8x8), related
    to 28.COM and 50.COM, now range check the current
    cursor row against number of rows to keep it on
    screen.
  - Fixed ADDKEY "full" command not turning on the
    full core when used with a delay. (Allofich)
  - INT 10h AX=101Ah Get Video DAC color-page state fixed
    to restore display after blanking it due to Attribute
    Controller read and write operations. This fixes
    IBM PC compatible MS-DOS game "Blue Force".
  - Debugger: "VGA AC" now shows AC disable bits as well
    as the internal state indicating whether the last
    byte written to 3C0h was handled as the index.
0.82.24
  - FDC emulation now allows READ command to look for
    sector numbers that are out of range in order to
    support booter games that read out of range sector
    numbers as part of their copy protection.
  - Windows SDL1 window resizing fixed to avoid snapping
    and jumping issues when the window is sized down
    to the point the menu bar doubles or triples in
    height due to menu item wrapping.
  - FDC clear DMA terminal count automatically (with a
    warning printed to the log) at beginning of FDC
    read/write (PC-98 booter game Star Cruiser).
  - FDC DMA read/write failure now causes FDC to signal
    an error, and the debug output will say so.
  - FDC debug output now shows motor bits in the correct
    order, not backwards
  - CONFIG.COM and MIXER.COM are now registered only at
    DOS kernel startup, to resolve their disappearance
    after RE-DOS or guest system reset.
  - Some OpenGL cleanup and fixes for when compiling for
    Mac OS X Catalina.